--- a/about.html
+++ b/about.html
@@ -99,11 +99,11 @@
         <h3>Frank</h3>
         </div>
         <div>
-        <img src="img/klip.jpg" alt="">
+        <img src="img/ady.jpg" alt="">
         <h3>Ady</h3>
         </div>
         <div>
-        <img src="img/klip.jpg" alt="">
+        <img src="img/hanna.jpg" alt="">
         <h3>Hanna</h3>
         </div>
       </div>
